--- a/app/views/blogposts/show.erb
+++ b/app/views/blogposts/show.erb
@@ -1,6 +1,9 @@
 <h1>Blog Post Title</h1>
 </br>
+
+<div class="content">
  <p><%= @blogpost.content %></p> 
+
 
 <p><a href="/blogposts/<%= @blogpost.id %>/edit">edit</a></p>
 
@@ -12,3 +15,5 @@
     </p>
 
     <p><a href="/blogposts">Go back to blogposts</a></p>
+
+</div>
