--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -47,8 +47,8 @@
   h2 {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
+    font-weight: bold;
+    font-size: 40px;
     line-height: 28px;
     
     color: #9CAEE7;
@@ -67,6 +67,18 @@
     line-height: 28px;
     
     color: #9CAEE7;
+  }
+
+  .content {
+    text-align: center;
+  }
+
+  .blogposts {
+    text-align: center;
+  }
+
+  .welcome {
+    margin-top: 80px;
   }
 
   .intro {
@@ -110,6 +122,10 @@
   .btn-anchor {
     background-color: transparent;
     color: #DECE95; 
+  }
+
+  .btn-logout {
+    color: #9CAEE7; 
   }
 
   .header h1{
