--- a/app/views/blogposts/show.erb
+++ b/app/views/blogposts/show.erb
@@ -4,7 +4,7 @@
 <div class="content">
  <p><%= @blogpost.content %></p> 
 
-
+ <p><a href="/titles/new">Generate Title</a></p>
 <p><a href="/blogposts/<%= @blogpost.id %>/edit">edit</a></p>
 
 <p>
