--- a/app/views/titles/show.erb
+++ b/app/views/titles/show.erb
@@ -1,1 +1,7 @@
-<h1>Title edit</h1>
+<h1>Title Generator</h1>
+
+<form action="/titles" method="POST">
+    <label for="title">Algorithm title generator here</label>
+    <input id="title" type="text" name="title" />
+    <input type="submit" />
+</form>
