--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -69,6 +69,11 @@
     color: #9CAEE7;
   }
 
+  input {
+    width: 100%;
+    background-color: #DECE95; 
+  }
+
   .content {
     text-align: center;
   }
@@ -126,6 +131,8 @@
 
   .btn-logout {
     color: #9CAEE7; 
+    font-weight: 300;
+    padding:5px 20px;
   }
 
   .header h1{
