--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -70,8 +70,28 @@
   }
 
   input {
+    width: 50%;
+    border-radius: 13px;   
+  }
+
+  input[type=text type=password] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: #DECE95;
+    border-radius: 13px;
+  }
+
+  textarea {
     width: 100%;
-    background-color: #DECE95; 
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
   }
 
   .content {
