--- a/app/views/blogposts/edit.erb
+++ b/app/views/blogposts/edit.erb
@@ -11,7 +11,7 @@
             <label for="content">Write</label>
             </br>
             <textarea id="content" type="text" name="content">
-            # <%= @blogpost.content %>
+            <%= @blogpost.content %>
             </textarea>
             </br>
             <input type="submit"/>
